coded footer, completed

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+    <footer class="end-final">
+        <h6>This is the footer @copywrite Code Main</h6>
+    </footer>
+   
 </body>
 
 </html>
